--- a/index.html
+++ b/index.html
@@ -62,15 +62,13 @@
                             <p>Conte conosco, temos mais de 30 lojas no portifólio.</p>
                             <a href="#" class="main-btn">Ver Portifolio</a>
                         </div>
-                    </div>
-                    
+                    </div>                    
                     <div class="carousel-item">
                         <img src="img/banner2.png" class="d-block w-100" alt="Engenharia de software">
                         <div class="carousel-caption d-none d-md-block text-center">
                             <h2>Está querendo tirar o projeto do pepel?</h2>
                             <p>nossa equipe de engenharia de software está pronta para lhe aender.</p>
                             <a href="#" class="main-btn">Entre em contato</a>
-
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -79,7 +77,6 @@
                             <h2>Está buscando manutenção no seu software?</h2>
                             <p>a hDC conta com engenheiros altamente qualificados para resolver seu problema. </p>
                             <a href="#" class="main-btn">Entre em contato.</a>
-
                         </div>
                     </div>
                 </div>
@@ -91,11 +88,36 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
-
             </div>
+            <div id="about-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>Sobre a hDC Agency</h3>
 
-        </div>
-        
+                        </div>
+                        <div class="col-md-6">
+                            <img class="img-fluid"  src="img/agencia.jpg" alt="Agência hDC">
+                        </div>
+                        <div class="col-md-6">
+                            <h3 class="about-title">Uma agência que pensa no futuro</h3>
+                            <p>Nossos projetos são adaptados ao cliente e seu propósito.</p>
+                            <p>Após a especificação do projetos os arquitetos de software definirão as melhores tecnologias para seu projeto.</p>
+                            <p>E nossos designers trabalharão na sua interface/layout para impulsionar o negócio.</p>
+                            <p>Veja outros diferenciais:</p>
+                            <ul id="about-list">
+                                <li><i class="fas fa-check"></i> Utilização de Machine Learning</li>
+                                <li><i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
+                                <li><i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
+                                <li><i class="fas fa-check"></i> Sistema de pagamento próprio</li>
+                                <li><i class="fas fa-check"></i> Desenvolvilmento com metodologia ágil</li>
+
+                            </ul>                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
     </main>
     <script src="js/script.js"></script>    
 </body>
