Create portfolio filter

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
         <div class="container-fluid">
-            <div id="mainSlider" class="carousel slide" data-ride="carousel">
+            <div id="mainSlider" class="carousel slide"  data-ride="carousel">
                <ol class="carousel-indicators">
                 <li data-target="#mainSlider" data-slide-to="0" class="active"></li>
                 <li data-target="#mainSlider" data-slide-to="1"></li>
@@ -232,8 +232,8 @@
               </div>
             </div>
             <!--Trabalhe conosco-->
-      <div id="apply-area">
-        <div class="container-fluid">
+            <div id="apply-area">
+         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 apply-box" id="company-img"></div>
             <div class="col-md-6 apply-box" id="pattern-img">
@@ -244,9 +244,43 @@
               <a href="#" class="main-btn" id="apply-btn">Saiba Mais</a>
             </div>
           </div>
-        </div>
-      </div>
-        </div>        
+         </div>
+            </div>
+            <!--portifolio-->
+            <div id="portifolio-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="main-title">Conheça nossos projetos</h3>
+                        </div>
+                        <div class="col-md-12" id="filter-btn-box">
+                            <button class="main-btn filter-btn active" id="all-btn">Todos</button>
+                            <button class="main-btn filter-btn" id="dev-btn">Desenvolvimento</button>
+                            <button class="main-btn filter-btn" id="dsg-btn">Design</button>
+                            <button class="main-btn filter-btn" id="seo-btn">SEO</button>
+                        </div>
+                        <div class="col-md-4 project-box dev">
+                            <img src="img/proj1.jpg" class="img-fluid" alt="Projeto 1">
+                          </div>
+                          <div class="col-md-4 project-box dsg">
+                            <img src="img/proj2.jpg" class="img-fluid" alt="Projeto 2">
+                          </div>
+                          <div class="col-md-4 project-box seo">
+                            <img src="img/proj3.jpg" class="img-fluid" alt="Projeto 3">
+                          </div>
+                          <div class="col-md-4 project-box dev">
+                            <img src="img/proj4.jpg" class="img-fluid" alt="Projeto 4">
+                          </div>
+                          <div class="col-md-4 project-box dsg">
+                            <img src="img/proj5.jpg" class="img-fluid" alt="Projeto 5">
+                          </div>
+                          <div class="col-md-4 project-box seo">
+                            <img src="img/proj6.jpg" class="img-fluid" alt="Projeto 6">
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </div>          
     </main>
     <script src="js/script.js"></script>    
 </body>
