--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div  class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/banner1.png" class="d-block w-100 img-fluid" alt="Projetos de e-comerce">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2>Quer criar um e-commerce?</h2>
                             <p>Conte conosco, temos mais de 30 lojas no portifólio.</p>
                             <a href="#" class="main-btn">Ver Portifolio</a>
@@ -62,7 +62,7 @@
                     </div>                    
                     <div class="carousel-item">
                         <img src="img/banner2.png" class="d-block w-100" alt="Engenharia de software">
-                        <div class="carousel-caption d-none d-md-block text-center">
+                        <div class="carousel-caption  d-md-block text-center">
                             <h2>Está querendo tirar o projeto do pepel?</h2>
                             <p>nossa equipe de engenharia de software está pronta para lhe aender.</p>
                             <a href="#" class="main-btn">Entre em contato</a>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner3.png" class="d-block w-100" alt="Manutenção em software">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption  d-md-block">
                             <h2>Está buscando manutenção no seu software?</h2>
                             <p>a hDC conta com engenheiros altamente qualificados para resolver seu problema. </p>
                             <a href="#" class="main-btn">Entre em contato.</a>
