Added smooth scrolling and enhanced UI elements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="carousel-caption d-md-block">
                             <h2>Quer criar um e-commerce?</h2>
                             <p>Conte conosco, temos mais de 30 lojas no portifólio.</p>
-                            <a href="#" class="main-btn">Ver Portifolio</a>
+                            <a href="#portifolio-area" class="main-btn">Ver Portifolio</a>
                         </div>
                     </div>                    
                     <div class="carousel-item">
@@ -65,7 +65,7 @@
                         <div class="carousel-caption  d-md-block text-center">
                             <h2>Está querendo tirar o projeto do pepel?</h2>
                             <p>nossa equipe de engenharia de software está pronta para lhe aender.</p>
-                            <a href="#" class="main-btn">Entre em contato</a>
+                            <a href="#contact-area" class="main-btn">Entre em contato</a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -73,7 +73,7 @@
                         <div class="carousel-caption  d-md-block">
                             <h2>Está buscando manutenção no seu software?</h2>
                             <p>a hDC conta com engenheiros altamente qualificados para resolver seu problema. </p>
-                            <a href="#" class="main-btn">Entre em contato.</a>
+                            <a href="#contact-area" class="main-btn">Entre em contato.</a>
                         </div>
                     </div>
                 </div>
